Fix breadcrumb spacing

--- a/_src/assets/css/global.css
+++ b/_src/assets/css/global.css
@@ -480,7 +480,7 @@ input[type="submit"]:focus {
 }
 
 .site-breadcrumbs li:not(:last-child)::after {
-  margin: 0 var(--space-xxsmall);
+  margin: 0 var(--space-xxxxsmall);
   content: "/";
 }
 
